test_suite5/ALAN/test_suite/alan-2022-examples/failing/005360_mutation.alan
source c4h begin leave B while 9 do relax end) end
